# easyencrypting

./: README.md
easyencrypting/: LICENSE  pyproject.toml  setup.py
easyencrypting/easyencrypting.egg-info/: PKG-INFO  SOURCES.txt
easyencrypting/src/easyencrypting_fiocco09123scp/: __init__.py  easyencrypting.py
