 [project]

name = "easyencrypting"
version = "0.0.1"

authors = [
  { name="Ultimate Developers", email="ultimatedevelopersit@gmail.com" },
  { name="Vittorio Morelli", email="ultimatedevelopersit@gmail.com" }
]

description = "Easyencrypting is a python library used for encoding and decoding sentences or files"
readme = "README.md"
requires-python = ">=3.0"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fiocco09123scp/easyencrypting"
